Move around settings and donation stuff
- Avoid displaying donation stuff it the config doesn't exist for it

--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -27,7 +27,7 @@ html {
 
 main {
 	display: grid;
-	grid-template-rows: 1fr auto auto 1fr;
+	grid-template-rows: 1fr auto auto auto 1fr;
 }
 
 header,
